--- a/AI System Architect Tyson Portfolio (3).html
+++ b/AI System Architect Tyson Portfolio (3).html
@@ -94,7 +94,7 @@
     font-size:2.8rem;
     margin:0 0 .5rem;
     background:linear-gradient(90deg,var(--accent),var(--accent-light));
-    -webkit-background-clip:text;
+    -webkit-background-clip:"text";
     -webkit-text-fill-color:transparent;
   }
   .hero p{
